<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="author">Author: M.Pappas 28.07.2021</string>
    <string name="deg">deg</string>
    <string name="app_wind_angle">App.Wind Angle</string>
    <string name="knots">knots</string>
    <string name="app_wind_speed">App.Wind Speed</string>
    <string name="true_wind_speed">True Wind Speed</string>
    <string name="ground_wind">Ground Wind</string>
    <string name="deg_m">deg M</string>
    <string name="deg_t">deg T</string>
    <string name="heading">Heading</string>
    <string name="boat_speed">Boat Speed</string>
    <string name="action">Action</string>
    <string name="log_trip">Log / Trip</string>
    <string name="nautical_miles">Nautical Miles</string>
    <string name="blank" />
    <string name="metres">Metres</string>
    <string name="depth">Depth</string>
    <string name="water_temp">Water Temperature</string>
    <string name="deg_celcius">Degrees C</string>
    <string name="true_wind_angle">True Wind Angle</string>
    <string name="polar_speed">Polar Speed</string>
    <string name="polar_eff">Efficiency</string>
    <string name="percent">%</string>
    <string name="sog">SOG</string>
    <string name="cog">COG</string>
    <string name="position">Position</string>
    <string name="next_wp">Next Waypoint</string>
    <string name="bearing">Bearing</string>
    <string name="distance">Distance</string>
    <string name="setup">Setup</string>
    <string name="previous"><![CDATA[<< Prev]]></string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="Status">app_status</string>
    <string name="ip_addess">NMEA Gateway IP Address</string>
    <string name="setup_screen">Setup</string>
    <string name="keep_for_this_session">Keep for this Session Only</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Network">Network</string>
    <string name="port_number">NMEA Gateway Port</string>
    <string name="demo_mode">Demo mode</string>
    <string name="on_off">On/Off</string>
    <string name="demo_file">Demo File Name</string>
    <string name="display">Display</string>
    <string name="disp_mode">Display mode</string>
    <string name="vertical_scrolling">Vertical Scrolling</string>
    <string name="horizontal_scrolling">Horizontal Scrolling</string>
    <string name="transition">Transition</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="instr_colour_day">Instrument digits colour (Day)</string>
    <string name="bgnd_colour_day">Background display colour (Day)</string>
    <string name="instr_colour_night">Instrument digits colour (Night)</string>
    <string name="bgnd_colour_night">Background display colour (Night)</string>
    <string name="wind">Wind</string>
    <string name="calc_true_wind">Calculate True wind</string>
    <string name="calc_gnd_wind">Calculate Ground wind</string>
    <string name="socket_timeout">Socket Timeout (msec)</string>
    <string name="net_max_lines">Max lines to read from server</string>
    <string name="timers">Timers</string>
    <string name="init_timer">Initial Timer (msec)</string>
    <string name="loop_timer">Loop Timer (msec)</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="get_log">Get Log</string>
    <string name="prep_log"> Preparing Log extract…</string>
    <string name="log_severity">Severity</string>
    <string name="inc_tag">Include TAG (RegExp)</string>
    <string name="exc_tag">Exclude TAG (RegExp)</string>
    <string name="from_time">From time</string>
    <string name="reverse_order">Reverse order</string>
    <string name="nmea">NMEA</string>
    <string name="validate_chksum">Validate checksum</string>
    <string name="polar_file">Polar file</string>
    <string name="night_mode">Night mode</string>
    <string name="auto_night_mode">Auto switch to night mode</string>
    <string name="brightness">Brightness</string>
    <string name="gpstime">GPS Date/Time</string>
    <string name="instr_colour_day_out">Instrument digits colour out-of-date (Day)</string>
    <string name="instr_colour_night_out">"Instrument digits colour out-of-date (Night) "</string>
    <string name="timeout_outofdate">Display out-of-date timeout (msec)</string>
    <string name="coordinates">Coordinates</string>
    <string name="xte">XTE</string>
    <string name="max_values">Maximum Values</string>
    <string name="max_label">Max %s</string>
    <string name="instr_colour_max_day">Instrument digits colour - Max values (Day)</string>
    <string name="instr_colour_max_night">Instrument digits colour - Max values (Night)</string>
    <string name="reset_max">Reset Max Values</string>
    <string name="max_values_file">Max values filename</string>
</resources>