<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.mpdev.android.boatinstruments.SetupActivity">

    <!-- network -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Network"
        android:textSize="24sp"
        android:textColor="@android:color/darker_gray"/>

    <!-- IP address -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/ip_addess"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:layout_weight="4"
            android:maxLength="15"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <!-- Port Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/port_number"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/port_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:maxLength="5"
            android:digits="0123456789"
            android:inputType="number" />
    </LinearLayout>

    <!-- end of setup screen -->
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <!-- final button - keep for this session -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="9">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">
            <!-- keep button -->
            <Button
                android:id="@+id/keep_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/setup"
                android:padding="@dimen/margin_small"
                android:text="@string/keep_for_this_session"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>