<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/page_frame2"
    tools:context="com.mpdev.android.boatinstruments.InstrumentsDisplayFragment">


    <!-- 5th row - depth / water temp -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/depth"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/depth"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:gravity="end"
                android:text="@string/metres"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <View
                android:id="@+id/line5l"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/water_temp"
                android:id="@+id/water_temp_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/water_temp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:gravity="end"
                android:text="@string/deg_celcius"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <View
                android:id="@+id/line5r"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </LinearLayout>

    <!-- 6th row - true wind speed / angle -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/true_wind_speed"
                android:id="@+id/true_wind_speed_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/true_wind_speed"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:gravity="end"
                android:text="@string/knots"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <View
                android:id="@+id/line6l"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/true_wind_angle"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/true_wind_angle"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:gravity="end"
                android:text="@string/deg"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <View
                android:id="@+id/line6r"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </LinearLayout>

    <!-- 7th row - polar speed and efficiency -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/polar_speed"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/polar_speed"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:gravity="end"
                android:text="@string/knots"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <View
                android:id="@+id/line7l"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_tiny"
                android:text="@string/polar_eff"
                android:id="@+id/polar_eff_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/polar_eff"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:gravity="end"
                android:text="@string/percent"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <View
                android:id="@+id/line7r"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </LinearLayout>

    <!-- GPS Date/Time -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_tiny"
            android:text="@string/gpstime"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:gravity="center"
            android:id="@+id/gps_date"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/gps_time"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:gravity="end"
            android:text="@string/blank"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <View
            android:id="@+id/line8"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

</LinearLayout>